@@ -2,6 +2,9 @@
 
 = 4.10.0 =
 * WordPress 5.8 compatible.
+* Added the affiliates_updated_affiliate_status_params filter.
+* Added the affiliates_new_affiliate_registration_params filter.
+* Added the affiliates_new_affiliate_user_registration_params filter.
 
 = 4.9.0 =
 * WordPress 5.7 compatible.
